--- a/ch2_ex.qmd
+++ b/ch2_ex.qmd
@@ -1,23 +1,32 @@
 # Exercices
 
-### Questions
+## Questions
 
-- Montrer que la convergence en loi vers une constante implique la convergence en probabilité. 
-- Montrer que, si un modèle statistique n'est pas identifiable, alors il ne peut exister aucun estimateur convergent. 
-- Trouver un couple de variables aléatoires $(X_n, Y_n)$ tel que $X_n$ converge en loi et $Y_n$ converge en loi, mais le couple ne converge pas en loi. 
-- On observe un échantillon de lois de Poisson de paramètre $\lambda$, que l'on estime par la moyenne empirique. Calculer le risque quadratique de cet estimateur. 
-- Quelle est la loi d'une somme de lois de Bernoulli indépendantes ? L'écart-type ?
+1. Montrer que la convergence en loi vers une constante implique la convergence en probabilité. 
+2. Montrer que, si un modèle statistique n'est pas identifiable, alors il ne peut exister aucun estimateur convergent. 
+3. Trouver un couple de variables aléatoires $(X_n, Y_n)$ tel que $X_n$ converge en loi et $Y_n$ converge en loi, mais le couple ne converge pas en loi. 
+4. On observe un échantillon de lois de Poisson de paramètre $\lambda$, que l'on estime par la moyenne empirique. Calculer le risque quadratique de cet estimateur. 
+5. Quelle est la loi d'une somme de lois de Bernoulli indépendantes ? L'écart-type ?
 
+## Exercices 
 
-### Variance empirique
+:::{#exr-varemp}
+
+## Variance empirique
 
 On se donne $Y_1, \dots, Y_n$, i.i.d de moyenne $\mu$ et variance $\sigma^2$.
 
 1. On suppose $\mu$ connu. Donner un estimateur non biaisé de $\sigma^2$. 
 2. On suppose $\mu$ inconnu. Calculer l'espérance de $\sum_{i=1}^n (Y_i - \bar{Y}_n)^2$. En déduire un estimateur non biaisé de $\sigma^2$.
 
+:::
 
-### Estimation de masse
+
+
+
+:::{#exr-estimasse}
+
+## Estimation de masse
 
 Au cours de la seconde guerre mondiale, l'armée alliée notait les numéros de série $X_1, \dots, X_n$ de tous les tanks nazis capturés ou détruits, afin d'obtenir un estimateur du nombre total $N$ de tanks produits. 
 
@@ -29,26 +38,38 @@ On pourra utiliser le fait que l'inégalité de Hoeffding s'applique également 
 
 Selon Ruggles et Broodie (1947, JASA), la méthode statistique a fourni comme estimation une production moyenne de 246 tanks/mois entre juin 1940 et septembre 1942. Des méthodes d'espionnage traditionnelles donnaient une estimation de 1400 tanks/mois. Les chiffres officiels du ministère nazi des Armements ont montré après la guerre que la production moyenne était de 245 tanks/mois.
 
-### Uniforme (1)
+::: 
+
+
+:::{#exr-uniff1}
+
+## Lois uniformes (1)
 
 On considère $(X_1, \dots, X_n)$ un échantillon de loi uniforme sur $]\theta, \theta+1[$. 
 
-1. Donner la densité de la loi de la variable $R_n=X_{(n)} -X_{(1)}$, 
-où $X_{(1)}=\min(X_1, \dots, X_n)$ et $X_{(n)}=\max(X_1, \dots, X_n)$.
+
+1. Donner la densité de la loi de la variable $R_n=X_{(n)} -X_{(1)}$, où $X_{(1)}=\min(X_1, \dots, X_n)$ et $X_{(n)}=\max(X_1, \dots, X_n)$.
 2. Étudier les différents modes de convergence de $R_n$ quand $n\to\infty$.
 3. Étudier le comportement en loi de $n(1-R_n)$ quand $n\to\infty$.
 
-### Uniforme (2)
+:::
+
+
+:::{#exr-unif2}
+
+## Lois uniformes (2)
 
 Soit $X_1,\dots,X_n$ un échantillon de loi $\mathscr{U}([0,\theta])$, avec $\theta >0$. On veut estimer $\theta$. 
-
 
 1. Déterminer un estimateur  de $\theta$ à partir de $\bar{X}_n$. 
 2. On considère  l'estimateur $X_{(n)}= {\max}_{1\leq i \leq n}X_i$.  Déterminer les propriétés asymotptiques de ces estimateurs. 
 3. Comparer les performances des deux estimateurs.
 
-### Gamma
+::: 
 
+:::{#exr-gamma}
+
+## Lois Gamma
 
 La loi Gamma $\Gamma(\alpha, \beta)$ de paramètres $\alpha, \beta>0$ a pour densité
 $$ x\mapsto \frac{\beta^\alpha}{\Gamma(\alpha)}x^{\alpha-1}\exp(-\beta x), \quad x>0.$$
@@ -57,8 +78,11 @@ On se donne un échantillon $(X_1,\dots,X_n)$ de loi $\Gamma(\alpha, \beta)$ et 
 1. On suppose le paramètre $\beta$ connu. Proposer un estimateur de $\alpha$ par la méthode des moments.
 2. On suppose à présent que les deux paramètres $\alpha, \beta$ sont inconnus. Proposer un estimateur de $(\alpha,\beta)$ par la méthode des moments.
 
+:::
 
-### Gumbel
+:::{#exr-gumbel}
+
+## Lois de Gumbel
 
 La loi de Gumbel (centrale) de paramètre $\beta$ a pour fonction de répartition $F(x)= e^{-e^{-x/\beta}}$. 
 On observe un échantillon de lois de Gumbel et l'on cherche à estimer $\beta$.
@@ -66,13 +90,17 @@ On observe un échantillon de lois de Gumbel et l'on cherche à estimer $\beta$.
 1. Calculer la densité des lois de Gumbel, ainsi que leur moyenne et variance [indice : $0.57721…$] 
 2. En déduire un estimateur convergent dont on calculera le risque quadratique et les propriétés asymptotiques. 
 
+::: 
 
 
-### Yule-Simon
+:::{#exr-yule}
 
+## Lois de Yule-Simon
 
 Une variable aléatoire $X$ suit la loi de Yule-Simon de paramètre $\rho>0$ lorsque $\mathbb{P}(X = n) = \rho B(n, 1+\rho)$, où $n\geqslant 1$ et $B$ est la [fonction beta](https://en.wikipedia.org/wiki/Beta_function). 
 
 1. Montrer que si $\rho>1$, alors $\mathbb{E}[X] = \rho/(\rho-1)$. 
 2. Trouver un estimateur de $\rho$ et donner ses propriétés. 
+
+::: 
 
