--- a/ch3_ex.qmd
+++ b/ch3_ex.qmd
@@ -12,6 +12,7 @@
 8. Comparer les queues de distribution des lois $N(0,1), \chi_2(n)$ et $\mathscr{T}(n)$. 
 9. Expliquer à votre grand-mère la différence entre un intervalle de fluctuation et un intervalle de confiance. 
 10. L'intervalle de confiance de niveau $1-\alpha$ pour la moyenne d'un modèle $N(\mu, 1)$ avec $n$ observations est $I_n = [\bar{X}_n \pm z_\alpha /\sqrt{n}]$. Supposons qu'on obtienne une nouvelle observation indépendante des autres, disons $Z$. La probabilité $\mathbb{P}(Z \in I_n)$ est-elle plus grande ou plus petite que $1-\alpha$ ?
+11. Comparer la longueur des intervalles de confiance obtenus par les différentes méthodes de la section @sec-icber. 
 
 ## Exercices 
 
