--- a/ch4.qmd
+++ b/ch4.qmd
@@ -22,7 +22,9 @@ Un test est un événement qui, s'il survient, nous incite à rejeter l'hypothè
 
 Par « événement », on veut bien dire « un élément de $\mathscr{F}$ », c'est-à-dire qui n'est déterminé que par les observations et pas par $\theta$. 
 
-Un des grands objectifs de la statistique mathématique est de construire des familles de tests qui, pour un niveau de confiance $1-\alpha$ fixé, ont la plus grande puissance possible. Comme on verra dans les exemples, le rôle des deux hypothèses n'est pas interchangeable. Maximiser le niveau et la puissance ne reviennent pas au même. Le choix des hypothèses $H_0$ et $H_1$ n'est pas anodin : l'hypothèse $H_0$ est une hypothèse que l'on cherche implicitement à réfuter. 
+Un des grands objectifs de la statistique mathématique est de construire des familles de tests qui, pour un niveau de confiance $1-\alpha$ fixé, ont la plus grande puissance possible ; autrement dit, **trouver un événement hautement improbable sous l'hypothèse nulle, et hautement probable sous l'hypothèse alternative**. 
+
+ Comme on verra dans les exemples, le rôle des deux hypothèses n'est pas interchangeable. Maximiser le niveau et la puissance ne reviennent pas au même. Le choix des hypothèses $H_0$ et $H_1$ n'est pas anodin : l'hypothèse $H_0$ est une hypothèse que l'on cherche implicitement à réfuter. 
 
 
 1. Si $\theta \in H_0$ quel qu'il soit, les probablités pour qu'un certain événement $\rejet$ sont infimes -- disons, 1%. 
@@ -32,6 +34,46 @@ C'est pour cela que les tests sont une forme de logique statistique. Le raisonne
 
 ## Exemples de tests gaussiens
 
+On se place dans un modèle où $X_1, \dotsc, X_n$ sont des gaussiennes $N(\mu, \sigma^2)$. Nous avons déjà vu plusieurs fois que $\bar{X}_n \sim N(\mu, \sigma^2)$. 
+
+### Construction du test
+
+On cherche à réfuter l'hypothèse selon laquelle ces variables aléatoires sont centrées ; autrement dit, on posera $H_0 = \{0\}$. Sous cette hypothèse, nos variables aléatoires sont donc des variables $N(0,\sigma^2)$. 
+
+**Supposons dans un premier temps que $\sigma^2$ est connue.** Sous $H_0$, on a donc 
+$$ \frac{\sqrt{n}\bar{X}_n}{\sigma} \sim N(0,1)$$
+et par conséquent, $P_0(|\bar{X}_n| < z_\alpha \sigma / \sqrt{n}) = 1-\alpha$. Autrement dit, sous l'hypothèse $\mu = 0$, on devrait observer l'événement 
+$$ \bar{X}_n \in \left[ \pm \frac{z_\alpha \sigma}{\sqrt{n}}\right]$$
+avec probabilité élevée $1-\alpha$. Si cet événement n'est pas observé, il est alors très douteux que $\mu$ soit effectivement égal à zéro ! On pose donc 
+$$ \rejet_\alpha = \{|\bar{X}_n | > z_\alpha \sigma / \sqrt{n}\}.$$
+Le niveau de ce test est bien $1-\alpha$ : nous l'avons construit pour cela. 
+
+**Supposons maintenant que $\sigma$ n'est pas connue.** En l'estimant via $\hat{\sigma}_n$, nous savons que (toujours sous l'hypothèse selon laquelle $\mu=0$)
+$$ \frac{\sqrt{n}\bar{X}_n}{\hat{\sigma}_n} \sim \mathscr{T}(n-1).$$
+On reproduit alors le raisonnement ci-dessus : comme $\mathbb{P}(|\bar{X}_n| < t_{n-1, 1-\alpha}\sqrt{\sigma}_n / \sqrt{n}) = \alpha$ où $t_{n-1,1-\alpha}$ est le quantile symétrique de $\mathscr{T}(n-1)$, on voit que l'événement
+$$ \rejet_\alpha = \{|\bar{X}_n| > t_{n-1,1-\alpha}\hat{\sigma}_n / \sqrt{n}\}$$
+est bien un test de niveau $1-\alpha$.  
+
+### Calcul de la puissance et hypothèse alternative
+
+Nous n'avons pas encore eu besoin de spécifier une hypothèse alternative, mais nous allons en avoir besoin pour calculer la puissance du test. Pour commencer, on va supposer que, si $\mu$ n'est pas nulle, alors elle ne peut être égale qu'à 1. Autrement dit, $H_1 = \{1\}$. Ce genre d'hypothèse alternative ne peut évidemment avoir de pertinence qu'en fonction du problème réel sous-jacent !
+
+Sous l'hypothèse alternative, donc, nous savons que $\bar{X}_n \sim N(1, \sigma^2)$. La puissance du test est définie par $1-\beta$ où $\beta=P_1(\accept_\alpha)$ c'est-à-dire 
+\begin{align}\beta &= P_1(|\bar{X}_n|\leqslant z_\alpha \sigma / \sqrt{n}) \\
+&= P_1 \left(-\frac{z_\alpha \sigma}{\sqrt{n}}\leqslant \bar{X}_n \leqslant \frac{z_\alpha \sigma}{\sqrt{n}} \right) \\
+&= P_1 \left(-\frac{z_\alpha \sigma}{\sqrt{n}}-1\leqslant \bar{X}_n - 1 \leqslant \frac{z_\alpha \sigma}{\sqrt{n}} -1 \right)\\
+&= \Phi(-\sqrt{n}/\sigma + z_\alpha) - \Phi(-\sqrt{n}/\sigma + z_\alpha).
+\end{align}
+où $\Phi(x) = \mathbb{P}(N(0,1)\leqslant x)$.
+Cette expression ne peut pas plus se simplifier, mais on peut quand même la borner par $F(-\sqrt{n}/\sigma + z_\alpha)$. Lorsque $x$ est grand, nous avons vu (@thm-gaussiantail) que $F(x) < e^{-x^2}/|x|\sqrt{2\pi}$. Ainsi, l'erreur de première espèce est bornée par $O(e^{-n/\sigma^2/2} / \sqrt{n})$. Cela tend extrêmement vite vers 0 ; en fait, dès que $n$ est plus grand que 10 et $\sigma=1$, cette erreur est inférieure à 0.1%, donc dans ce cas le test aura une puissance supérieure à $99.9\%$. 
+
+Que se serait-il passé si notre hypothèse alternative n'avait pas été $\mu=1$ mais $\mu = m$ pour n'importe quel $m\neq 0$ ? Dans ce cas, on aurait eu $H_1 = \mathbb{R}\setminus \{0\}$. L'erreur de première espèce aurait alors été $\beta = \sum_{m\neq 0}\beta_m $ où
+$$ \beta_m = P_m(\accept_\alpha).$$
+On revoyant les calculs ci-dessus, on voit que 
+$$\beta_m = \Phi(-m\sqrt{n}/\sigma + z_\alpha) - \Phi(-m\sqrt{n}/\sigma + z_\alpha).$$
+Il est évident $\lim_{m\to 0}\beta_m =1$, par continuité de $\Phi$. Ainsi, $\beta=1$ et $1-\beta = 0$ : pour cette seconde hypothèse alternative, la puissance de notre test… est nulle. 
+
+**Cela vient du fait que notre hypothèse alternative contient des situations quasiment indiscernables de notre hypothèse nulle.** Par exemple, il est quasiment impossible de distinguer $\mu = 0$ de $\mu = 10^{-100}$ par exemple. Cet exemple illustre la dissymétrie entre $H_0$ et $H_1$. 
 
 ## La notion de $p$-valeur
 
